recursion.cons.length.Length.scala.code
def length(l:List[Int]): Int = {
  n = l.head
  if (l == Nil){
    return(0)
  } else{
    return(length(l) + 1)
  }
  
}